--- a/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -1,5 +1,6 @@
+@let accounts = accounts$ | async;
+
 <app-base-modal
-  *ngVar="accounts$ | async as accounts"
   [titleTranslationKey]="category?.name"
   [subtitleTranslationKey]="'dashboard.categoryValueModal.subtitle'"
   [footerTemplate]="footer"
