--- a/src/app/modules/dashboard/modules/info-cards/components/account-value-edit-modal/account-value-edit-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/account-value-edit-modal/account-value-edit-modal.component.html
@@ -1,5 +1,6 @@
+@let account = account$ | async;
+
 <app-base-modal
-  *ngVar="account$ | async as account"
   [titleTranslationKey]="account.name"
   [subtitleTranslationKey]="'dashboard.accountValueEditModal.subtitle'"
   [footerTemplate]="footer"
