--- a/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
@@ -1,9 +1,10 @@
+@let accountsAmount = accountsAmount$ | async;
+
 <div
-  *ngVar="accountsAmount$ | async as accountsAmount"
   class="wrapper relative rounded-lg overflow-hidden"
   [ngClass]="{
     'cursor-pointer': accountsAmount,
-    'cursor-default ': !accountsAmount
+    'cursor-default ': !accountsAmount,
   }"
 >
   <app-info-card
