--- a/src/app/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -1,59 +1,55 @@
-<ng-container
-  *ngVar="{
-    isEmpty: isEmpty$ | async,
-    isBulkRecordsRemovingInProgress: isBulkRecordsRemovingInProgress$ | async
-  } as data"
->
-  <app-page-header
-    class="text-xl bg-transparent"
-    [title]="buildTranslationKey('title') | translate"
-    [loading]="data.isBulkRecordsRemovingInProgress"
-  >
-    @if (!data.isEmpty) {
-      <app-button
-        customTooltip
-        [tooltipText]="'dashboard.activityLog.removeButtonTooltip' | translate"
-        [position]="['left']"
-        [iconName]="'delete-bin'"
-        [disabled]="data.isBulkRecordsRemovingInProgress"
-        (click)="openRemoveConfirmationModal()"
-      ></app-button>
-    }
-  </app-page-header>
+@let isEmpty = isEmpty$ | async;
+@let isBulkRecordsRemovingInProgress = isBulkRecordsRemovingInProgress$ | async;
 
-  <div
-    class="flex flex-col overflow-hidden h-full w-full"
-    [ngClass]="{
-      'justify-center': data.isEmpty,
-      'items-center': data.isEmpty,
-      'pointer-events-none': data.isBulkRecordsRemovingInProgress
-    }"
-  >
-    @if (data.isEmpty) {
-      <span class="font-main font-bold text-charcoal text-lg text-center">
-        {{ buildTranslationKey('emptyStateText') | translate }}
-      </span>
-    } @else {
-      <cdk-virtual-scroll-viewport itemSize="66" class="h-full w-full !overflow-x-hidden">
-        <div
-          *cdkVirtualFor="
-            let item of itemsToRender$ | async;
-            trackBy: trackBy.bind(this);
-            templateCacheSize: 0
+<app-page-header
+  class="text-xl bg-transparent"
+  [title]="buildTranslationKey('title') | translate"
+  [loading]="isBulkRecordsRemovingInProgress"
+>
+  @if (!isEmpty) {
+    <app-button
+      customTooltip
+      [tooltipText]="'dashboard.activityLog.removeButtonTooltip' | translate"
+      [position]="['left']"
+      [iconName]="'delete-bin'"
+      [disabled]="isBulkRecordsRemovingInProgress"
+      (click)="openRemoveConfirmationModal()"
+    ></app-button>
+  }
+</app-page-header>
+
+<div
+  class="flex flex-col overflow-hidden h-full w-full"
+  [ngClass]="{
+    'justify-center': isEmpty,
+    'items-center': isEmpty,
+    'pointer-events-none': isBulkRecordsRemovingInProgress,
+  }"
+>
+  @if (isEmpty) {
+    <span class="font-main font-bold text-charcoal text-lg text-center">
+      {{ buildTranslationKey('emptyStateText') | translate }}
+    </span>
+  } @else {
+    <cdk-virtual-scroll-viewport itemSize="66" class="h-full w-full !overflow-x-hidden">
+      <div
+        *cdkVirtualFor="
+          let item of itemsToRender$ | async;
+          trackBy: trackBy.bind(this);
+          templateCacheSize: 0
+        "
+        class="h-16.5 flex items-center w-full"
+      >
+        <ng-container
+          *ngTemplateOutlet="
+            isItemDateObject(item) ? dateItem : recordItem;
+            context: { item: item }
           "
-          class="h-16.5 flex items-center w-full"
-        >
-          <ng-container
-            *ngTemplateOutlet="
-              isItemDateObject(item) ? dateItem : recordItem;
-              context: { item: item }
-            "
-          ></ng-container>
-        </div>
-      </cdk-virtual-scroll-viewport>
-    }
-  </div>
-</ng-container>
+        ></ng-container>
+      </div>
+    </cdk-virtual-scroll-viewport>
+  }
+</div>
 
 <ng-template #dateItem let-item="item">
   <div
@@ -66,7 +62,7 @@
     <span
       [ngClass]="{
         'text-dark-green': item.sum > 0,
-        'text-red': item.sum < 0
+        'text-red': item.sum < 0,
       }"
     >
       {{ item.sum > 0 ? '&plus;' : '' }}{{ item.sum | numberSpace | currencySymbol }}
