--- a/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -1,33 +1,33 @@
-<ng-container *ngVar="category$ | async as category">
-  <div class="flex items-center gap-x-3 flex-1 overflow-hidden h-full">
+@let category = category$ | async;
+
+<div class="flex items-center gap-x-3 flex-1 overflow-hidden h-full">
+  <span
+    class="w-2 h-full min-w-2 min-h-full border-2 border-solid border-charcoal rounded-full"
+    [style.backgroundColor]="category.hexColor"
+  ></span>
+
+  <svg-icon class="text-charcoal !w-7 !h-7" [iconName]="category?.icon"></svg-icon>
+
+  <div class="flex flex-col overflow-hidden">
     <span
-      class="w-2 h-full min-w-2 min-h-full border-2 border-solid border-charcoal rounded-full"
-      [style.backgroundColor]="category.hexColor"
-    ></span>
+      customTooltip
+      [tooltipText]="category?.name"
+      [showTooltipOnlyOnOverflow]="true"
+      class="font-main font-bold text-charcoal text-base truncate"
+    >
+      {{ category?.name }}
+    </span>
 
-    <svg-icon class="text-charcoal !w-7 !h-7" [iconName]="category?.icon"></svg-icon>
-
-    <div class="flex flex-col overflow-hidden">
-      <span
-        customTooltip
-        [tooltipText]="category?.name"
-        [showTooltipOnlyOnOverflow]="true"
-        class="font-main font-bold text-charcoal text-base truncate"
-      >
-        {{ category?.name }}
-      </span>
-
-      <span class="font-main font-bold text-charcoal text-base">
-        {{ category?.value | numberSpace | currencySymbol }}</span
-      >
-    </div>
+    <span class="font-main font-bold text-charcoal text-base">
+      {{ category?.value | numberSpace | currencySymbol }}</span
+    >
   </div>
+</div>
 
-  <div class="flex items-center gap-x-2">
-    <app-menu
-      [menuActions]="menuActions"
-      [loading]="isCategoryRemoving"
-      (click)="$event.stopPropagation()"
-    ></app-menu>
-  </div>
-</ng-container>
+<div class="flex items-center gap-x-2">
+  <app-menu
+    [menuActions]="menuActions"
+    [loading]="isCategoryRemoving"
+    (click)="$event.stopPropagation()"
+  ></app-menu>
+</div>
