--- a/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/add-account-modal/add-account-modal.component.html
@@ -19,6 +19,7 @@
       [isRequired]="true"
       [maxLength]="20"
       [displayCharCounter]="true"
+      [entityExistsValidator]="accountExistsValidator"
     ></custom-input>
 
     <custom-input
