--- a/src/app/modules/design-system/components/button/_button-current-color-mixin.scss
+++ b/src/app/modules/design-system/components/button/_button-current-color-mixin.scss
@@ -5,10 +5,20 @@ $hover-map:
 
 @mixin use-current-color() {
   &.use-current-color {
+    $disabled-color: color-mix(in srgb, currentcolor 50%, transparent);
+
     color: currentcolor;
 
     svg-icon {
       color: currentcolor;
+    }
+
+    &.disabled {
+      color: $disabled-color;
+
+      svg-icon {
+        color: $disabled-color;
+      }
     }
 
     @each $class, $value in $hover-map {
