changed logic for account value edit to use categories mechanism

--- a/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -9,7 +9,7 @@
   <span class="flex justify-between items-center gap-x-2">
     <div class="flex flex-col overflow-hidden">
       <span class="font-main text-charcoal text-base">
-        {{ record.category.name }}
+        {{ record.category.name | translate }}
       </span>
 
       <span class="block truncate flex-1 font-main font-bold text-blue text-xs">
