--- a/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -15,7 +15,7 @@
       [showTooltipOnlyOnOverflow]="true"
       class="font-main font-bold text-charcoal text-base truncate"
     >
-      {{ category?.name }}
+      {{ category?.name | translate }}
     </span>
 
     <span class="font-main font-bold text-charcoal text-base">
