--- a/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.scss
+++ b/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.scss
@@ -1,3 +1,7 @@
 :host {
   @apply flex justify-between items-center pl-2 py-3 pr-1 border-solid border-2 border-grey rounded-lg hover:border-charcoal h-16 gap-x-2 cursor-pointer;
+
+  &.is-system-category {
+    @apply pointer-events-none cursor-default opacity-70;
+  }
 }
