--- a/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -1,5 +1,3 @@
-@let category = category$ | async;
-
 <div class="flex items-center gap-x-3 flex-1 overflow-hidden h-full">
   <span
     class="w-2 h-full min-w-2 min-h-full border-2 border-solid border-charcoal rounded-full"
@@ -27,7 +25,7 @@
 <div class="flex items-center gap-x-2">
   <app-menu
     [menuActions]="menuActions"
-    [loading]="isCategoryRemoving"
+    [loading]="loading$ | async"
     (click)="$event.stopPropagation()"
   ></app-menu>
 </div>
