--- a/src/app/modules/design-system/components/form-controls/custom-select/custom-select.component.html
+++ b/src/app/modules/design-system/components/form-controls/custom-select/custom-select.component.html
@@ -12,7 +12,7 @@
   [ngClass]="{
     'form-control-error': formControl.invalid && isErrorState(),
     'border-grey': !isOpen,
-    'border-charcoal': isOpen
+    'border-charcoal': isOpen,
   }"
   [id]="id"
   (click)="toggleDropdown()"
@@ -34,7 +34,7 @@
     [ngClass]="{
       'text-red group-hover:text-red': formControl.invalid && isErrorState(),
       'text-charcoal': isOpen,
-      'text-grey': !isOpen
+      'text-grey': !isOpen,
     }"
     [iconName]="'chevron'"
   ></svg-icon>
@@ -51,13 +51,13 @@
 <ng-template #optionsTemplate>
   <div
     @overlayFade
-    class="bg-white rounded-md border-2 border-solid border-charcoal w-full max-h-50 min-h-20"
+    class="bg-white rounded-md border-2 border-solid border-charcoal w-full max-h-50 min-h-13"
   >
     <div
       class="flex gap-y-1 p-2 h-full rounded-md overflow-y-auto"
       [ngClass]="{
         'flex-col': !iconPickerMode,
-        'flex-wrap gap-x-1': iconPickerMode
+        'flex-wrap gap-x-1': iconPickerMode,
       }"
     >
       @for (option of dropdownOptions; track getId(option)) {
