--- a/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
+++ b/src/app/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
@@ -2,7 +2,7 @@
   <app-info-card
     class="flex-1"
     [iconName]="account.icon"
-    [primaryText]="primaryText"
+    [primaryText]="(account.value | numberSpace) + ' ' + account.currency.symbol"
     [secondaryText]="isAccountWithForeignCurrency ? accountValueInBaseCurrency : account.name"
     [tertiaryText]="isAccountWithForeignCurrency ? account.name : null"
     [bgColor]="account.bgColor"
