--- a/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -2,7 +2,7 @@
   [icon]="record.icon"
   [date]="record.date"
   [note]="record?.note"
-  [removeEnabled]="(doesCategoryExist$ | async) && isToday"
+  [removeEnabled]="shouldDisplayRemoveButton$ | async"
   [loading]="isRecordRemoving$ | async"
   (remove)="removeHandler()"
 >
