--- a/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -25,7 +25,7 @@
         </span>
       } @else {
         <span class="text-base font-normal">
-          {{ symbol }}{{ record.convertedValue | numberSpace | currencySymbol }}
+          {{ symbol }}{{ record.convertedValue | numberSpace | currencySymbol: record.currency }}
         </span>
 
         <span class="text-xs font-bold">
