--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -1,5 +1,5 @@
 :host {
-  @apply grid h-full relative gap-y-6 p-6;
+  @apply grid h-full flex-1 relative gap-y-6 p-6;
 
   grid-template-rows: auto auto 1fr;
 
