--- a/src/shared-styles/_general.scss
+++ b/src/shared-styles/_general.scss
@@ -21,3 +21,13 @@ body {
 ::-webkit-scrollbar-thumb {
   @apply bg-hover-black border border-solid border-transparent rounded-full bg-clip-padding;
 }
+
+.apex-tooltip {
+  @apply rounded py-1 px-2 relative bg-charcoal font-main text-base;
+}
+
+.apexcharts-legend {
+  &-text {
+    @apply font-main text-sm text-charcoal font-bold #{!important};
+  }
+}
