--- a/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
@@ -21,14 +21,14 @@
         ></span>
 
         @if (shouldDisplayRemark) {
-          <span class="text-red">&#xFE61;</span>
+          <span class="text-dark-red">&#xFE61;</span>
         }
       </checkbox>
     }
 
     @if (shouldDisplayRemark) {
       <div>
-        <span class="text-red">&#xFE61;</span>
+        <span class="text-dark-red">&#xFE61;</span>
         <span
           class="font-main text-sm text-charcoal"
           [innerHTML]="
