--- a/src/app/modules/design-system/components/form-controls/control-label/control-label.component.html
+++ b/src/app/modules/design-system/components/form-controls/control-label/control-label.component.html
@@ -2,6 +2,6 @@
   <span>{{ label }}</span>
 
   @if (required) {
-    <span class="text-red">&#xFE61;</span>
+    <span class="text-dark-red">&#xFE61;</span>
   }
 </label>
