--- a/src/app/modules/dashboard/modules/activity-log/components/currency-change-record/currency-change-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/currency-change-record/currency-change-record.component.html
@@ -20,7 +20,7 @@
 
 <ng-template #currencyTemplate let-currency="currency">
   <span class="flex items-center gap-x-1">
-    <svg-icon [iconName]="getIcon(currency)"></svg-icon>
+    <svg-icon [iconName]="getIcon(currency)" [iconSize]="'small'"></svg-icon>
     <span>{{ getText(currency) }}</span>
   </span>
 </ng-template>
