--- a/src/app/modules/design-system/components/form-controls/color-picker/color-picker.component.html
+++ b/src/app/modules/design-system/components/form-controls/color-picker/color-picker.component.html
@@ -25,7 +25,7 @@
 ></div>
 
 @if (isErrorState()) {
-  <div class="flex flex-col gap-y-1 w-full pt-1 px-1.5 pb-1.5 rounded-b-md bg-red">
+  <div class="flex flex-col gap-y-1 w-full pt-1 px-1.5 pb-1.5 rounded-b-md bg-dark-red">
     @if (formControl.hasError('required')) {
       <control-error> {{ 'formErrors.required' | translate }} </control-error>
     }
