--- a/src/app/modules/design-system/components/form-controls/custom-textarea/custom-textarea.component.html
+++ b/src/app/modules/design-system/components/form-controls/custom-textarea/custom-textarea.component.html
@@ -21,7 +21,7 @@
 }
 
 @if (isErrorState()) {
-  <div class="flex flex-col gap-y-1 w-full pt-1 px-1.5 pb-1.5 rounded-b-md bg-red">
+  <div class="flex flex-col gap-y-1 w-full pt-1 px-1.5 pb-1.5 rounded-b-md bg-dark-red">
     @if (hasRequiredError) {
       <control-error>{{ 'formErrors.required' | translate }}</control-error>
     }
