--- a/src/app/modules/statistics/components/monthly-statistics/monthly-statistics.component.scss
+++ b/src/app/modules/statistics/components/monthly-statistics/monthly-statistics.component.scss
@@ -1,13 +1,3 @@
 :host {
-  @apply flex flex-col w-full flex-1 gap-y-5;
-
-  canvas {
-    @apply block;
-  }
-
-  @media (width <= 480px) {
-    canvas {
-      @apply max-h-none;
-    }
-  }
+  @apply flex flex-col w-full h-fit overflow-hidden bg-white p-4 rounded-lg;
 }
