--- a/src/shared-styles/_form-controls.scss
+++ b/src/shared-styles/_form-controls.scss
@@ -27,7 +27,7 @@ color-picker {
 }
 
 .form-control-error {
-  @apply border-red group-hover:border-red rounded-b-none;
+  @apply border-dark-red group-hover:border-dark-red rounded-b-none;
 }
 
 input,
@@ -54,7 +54,7 @@ textarea {
   @apply focus:border-charcoal outline-none;
 
   &.form-control-error {
-    @apply focus:border-red;
+    @apply focus:border-dark-red;
   }
 }
 
