--- a/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.scss
+++ b/src/app/modules/dashboard/modules/categories/components/category-item/category-item.component.scss
@@ -4,4 +4,8 @@
   &.is-system-category {
     @apply pointer-events-none cursor-default opacity-70;
   }
+
+  @media (width <= 480px) {
+    @apply border-charcoal;
+  }
 }
