--- a/src/app/modules/metadata/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/modules/metadata/components/currency-switcher/currency-switcher.component.html
@@ -5,7 +5,7 @@
   [dontDisplayOnScreenWidth]="true"
   [menuActions]="menuActions"
   [icon]="icon$ | async"
-  [text]="currentLanguageText$ | async"
+  [text]="currentCurrencyText$ | async"
   [buttonSizeX]="'auto'"
   [loading]="loading$ | async"
 >
