--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 @if (loading$ | async) {
-  <app-fullsize-loader class="absolute"></app-fullsize-loader>
+  <app-fullsize-loader class="absolute top-0 left-0"></app-fullsize-loader>
 } @else {
   <app-page-header class="text-2xl" [title]="'dashboard.pageTitle' | translate">
     <span class="flex items-center gap-x-2">
