--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
@@ -6,7 +6,7 @@
   }
 
   @media (width <= 480px) {
-    @apply flex-row w-full h-14 max-h-14 px-4 py-0;
+    @apply flex-row w-full h-14 max-h-14 min-h-14 px-4 py-0;
 
     .nav-container {
       @apply w-auto h-full flex-row;
