--- a/src/app/modules/statistics/components/monthly-statistics/monthly-statistics.component.scss
+++ b/src/app/modules/statistics/components/monthly-statistics/monthly-statistics.component.scss
@@ -1,3 +1,3 @@
 :host {
-  @apply flex flex-col w-full h-fit overflow-hidden bg-white p-4 rounded-lg;
+  @apply flex flex-col w-full h-fit min-h-fit overflow-hidden bg-white p-4 rounded-lg;
 }
