--- a/src/app/modules/statistics/statistics.component.html
+++ b/src/app/modules/statistics/statistics.component.html
@@ -1,7 +1,11 @@
 @if (loading$ | async) {
-  <app-fullsize-loader class="absolute"></app-fullsize-loader>
+  <app-fullsize-loader class="absolute top-0 left-0"></app-fullsize-loader>
 } @else {
   <app-page-header class="text-2xl" [title]="'statistics.pageTitle' | translate"></app-page-header>
 
-  <app-monthly-statistics></app-monthly-statistics>
+  <div class="flex flex-1 flex-col gap-y-4 overflow-y-auto">
+    <app-monthly-statistics></app-monthly-statistics>
+
+    <app-snapshots-list></app-snapshots-list>
+  </div>
 }
