--- a/src/app/modules/statistics/statistics.component.scss
+++ b/src/app/modules/statistics/statistics.component.scss
@@ -1,5 +1,3 @@
 :host {
-  @apply relative grid grid-rows-2 w-full h-full overflow-hidden p-4 gap-y-4;
-
-  grid-template-rows: auto minmax(0, 1fr);
+  @apply relative flex flex-col w-full h-full overflow-hidden p-4 gap-y-4;
 }
