--- a/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/modules/design-system/components/confirmation-modal/confirmation-modal.component.html
@@ -52,6 +52,7 @@
     [colorScheme]="'charcoal'"
     [text]="buildTranslationKey('yesButton') | translate"
     [buttonSizeX]="'px100'"
+    [loading]="loading$ | async"
     (click)="resolveAction()"
   >
   </app-button>
