--- a/src/app/modules/dashboard/modules/categories/components/categories/categories.component.html
+++ b/src/app/modules/dashboard/modules/categories/components/categories/categories.component.html
@@ -1,13 +1,12 @@
 @let isEmpty = isEmpty$ | async;
 @let currentTab = currentTab$ | async;
 @let areAllCategoriesReset = areAllCategoriesReset$ | async;
-@let loading = loading$ | async;
 @let chartOptions = chartOptions$ | async;
 
 <div class="flex flex-col gap-y-4 w-full h-full justify-between">
-  <app-page-header class="text-xl bg-transparent" [title]="title | translate" [loading]="loading">
+  <app-page-header class="text-xl bg-transparent" [title]="title | translate">
     <div class="flex items-center gap-x-2">
-      <button-toggle [class.pointer-events-none]="loading">
+      <button-toggle>
         <app-button
           [activeColorScheme]="'charcoal'"
           [text]="'dashboard.categories.tabs.list' | translate"
@@ -32,11 +31,7 @@
         ></app-button>
       </button-toggle>
 
-      <app-menu
-        [colorScheme]="'transparent-dark'"
-        [menuActions]="menuActions"
-        [menuDisabled]="loading"
-      ></app-menu>
+      <app-menu [colorScheme]="'transparent-dark'" [menuActions]="menuActions"></app-menu>
     </div>
   </app-page-header>
 
@@ -51,11 +46,7 @@
   @if (!isEmpty) {
     @switch (currentTab) {
       @case ('list') {
-        <cdk-virtual-scroll-viewport
-          [class.pointer-events-none]="loading"
-          itemSize="76"
-          class="h-full"
-        >
+        <cdk-virtual-scroll-viewport itemSize="76" class="h-full">
           <div
             *cdkVirtualFor="
               let category of categories$ | async;
@@ -69,10 +60,7 @@
         </cdk-virtual-scroll-viewport>
       }
       @case ('chart') {
-        <div
-          class="w-full h-full flex flex-1 items-center justify-center overflow-hidden"
-          [class.pointer-events-none]="loading"
-        >
+        <div class="w-full h-full flex flex-1 items-center justify-center overflow-hidden">
           <apx-chart
             class="w-full"
             [series]="chartOptions.series"
