--- a/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.scss
+++ b/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.scss
@@ -1,3 +1,10 @@
 :host {
-  @apply flex flex-col bg-white p-4 rounded-lg border-solid border-2 border-grey hover:border-charcoal cursor-pointer w-96;
+  @apply flex flex-col bg-white p-4 gap-y-4 rounded-lg border-solid border-2 border-grey hover:border-charcoal cursor-pointer w-96;
+
+  .metric-grid {
+    @apply grid gap-y-3;
+
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
 }
