--- a/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
+++ b/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
@@ -1,10 +1,10 @@
 <div class="flex items-center justify-between">
   <div class="flex items-center text-charcoal gap-x-2">
-    <span class="font-main font-bold text-lg group-hover:underline">
+    <span class="date font-main font-bold text-lg group-hover:underline">
       {{ snapshot.date }}
     </span>
 
-    <svg-icon class="invisible group-hover:visible" [iconName]="'new-tab'"></svg-icon>
+    <svg-icon class="new-page invisible group-hover:visible" [iconName]="'new-tab'"></svg-icon>
   </div>
 
   <div class="flex items-center">
@@ -48,3 +48,5 @@
 </div>
 
 <div class="w-full h-px bg-hover-black"></div>
+
+<app-progress-bar [sections]="progressBarSections"></app-progress-bar>
