--- a/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.scss
+++ b/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.scss
@@ -7,4 +7,16 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
+
+  @media (width <= 480px) {
+    @apply border-charcoal;
+
+    .date {
+      @apply underline;
+    }
+
+    .new-page {
+      @apply visible;
+    }
+  }
 }
