remove bar chart

--- a/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
+++ b/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-between">
   <div class="flex items-center text-charcoal gap-x-2">
     <span class="date font-main font-bold text-lg group-hover:underline">
-      {{ snapshot.date }}
+      {{ date }}
     </span>
 
     <svg-icon class="new-page invisible group-hover:visible" [iconName]="'new-tab'"></svg-icon>
