simplified metadata module

--- a/src/app/modules/metadata/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/modules/metadata/components/currency-switcher/currency-switcher.component.html
@@ -4,8 +4,8 @@
   [position]="['left']"
   [dontDisplayOnScreenWidth]="true"
   [menuActions]="menuActions"
-  [icon]="icon$ | async"
-  [text]="currentCurrencyText$ | async"
+  [icon]="icon"
+  [text]="currentCurrencyText"
   [buttonSizeX]="'auto'"
 >
 </app-menu>
