--- a/src/app/modules/metadata/components/language-switcher/language-switcher.component.html
+++ b/src/app/modules/metadata/components/language-switcher/language-switcher.component.html
@@ -7,5 +7,5 @@
   [icon]="icon"
   [text]="currentLanguageText"
   [buttonSizeX]="'auto'"
-  [loading]="isLoading$ | async"
+  [loading]="loading$ | async"
 ></app-menu>
