metadata to domain, currency enum in account

--- a/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/modules/dashboard/modules/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -12,7 +12,7 @@
       </span>
 
       <span class="block truncate flex-1 font-main font-bold text-blue text-xs">
-        ({{ record.account.currency.symbol }}) {{ record.account.name }}
+        ({{ currencySymbol }}) {{ record.account.name }}
       </span>
     </div>
 
@@ -20,7 +20,7 @@
       @if (isSingleValue) {
         <span>
           {{ symbol }}{{ record.value | numberSpace }}
-          {{ record.account.currency.symbol }}
+          {{ currencySymbol }}
         </span>
       } @else {
         <span class="text-base font-normal">
@@ -29,7 +29,7 @@
 
         <span class="text-xs font-bold">
           {{ symbol }}{{ record.value | numberSpace }}
-          {{ record.account.currency.symbol }}
+          {{ currencySymbol }}
         </span>
       }
     </span>
