change category value orch, services structure

--- a/src/app/domains/category/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/domains/category/components/category-value-modal/category-value-modal.component.html
@@ -1,4 +1,6 @@
 @let accounts = accounts$ | async;
+@let category = category$ | async;
+@let maxValue = maxValue$ | async;
 
 <app-base-modal
   [titleTranslationKey]="category?.name"
