remove al record flow

--- a/src/app/domains/activity-log/components/category-value-change-record/category-value-change-record.component.html
+++ b/src/app/domains/activity-log/components/category-value-change-record/category-value-change-record.component.html
@@ -2,7 +2,7 @@
   [icon]="record.icon"
   [date]="record.date"
   [note]="record?.note"
-  [removeEnabled]="shouldDisplayRemoveButton$ | async"
+  [removeEnabled]="shouldDisplayRemoveButton"
   (remove)="removeHandler()"
 >
   <span class="flex justify-between items-center gap-x-2">
